Add bintray plugin and setup publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@ group=pl.pitcer
 artifact=confy
 version=1.0.0
 description=Configuration library
+vcs-url=https://github.com/pitcer/confy
+license=MIT
+labels=jvm,config,hocon
